add task list and little fixes

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="second_light_G">#DCE8D3</color>
 
     <color name="white">#FFFFFF</color>
+    <color name="grey">#B5B3B1</color>
 </resources>
