--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -30,12 +30,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <item name="android:textColor">?attr/colorPrimaryVariant</item>
         <item name="buttonTint">?attr/colorPrimaryVariant</item>
+        <item name="tint">?attr/colorSecondaryVariant </item>
         <!-- Customize your theme here. -->
     </style>
 
+
+
     <style name="Theme.Taskie.NoActionBar">
         <item name="windowNoTitle">true</item>
-        <item name="colorControlNormal">@color/white</item>
+        <item name="colorControlNormal">?attr/colorSecondaryVariant</item>
         <!--<item name="android:textColorPrimary">@color/white</item>-->
     </style>
 
