--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,61 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="fill_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <ImageView
         android:id="@+id/imageViewTaskType"
-        android:layout_width="30dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/viewBorder"
-        app:layout_constraintEnd_toStartOf="@+id/textViewTaskName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_favorite" />
 
     <TextView
         android:id="@+id/textViewTaskName"
         android:layout_width="290dp"
         android:layout_height="38dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="0dp"
+        android:layout_toStartOf="@+id/checkBoxTask"
+        android:layout_toEndOf="@+id/imageViewTaskType"
         android:textAlignment="textStart"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/checkBoxTask"
-        app:layout_constraintStart_toStartOf="@id/imageViewTaskType"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textSize="16sp" />
 
     <CheckBox
         android:id="@+id/checkBoxTask"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="665dp"
-        android:layout_alignParentEnd="true"
-        android:clickable="false"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:clickable="false" />
 
     <View
         android:id="@+id/viewBorder"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="17dp"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="17dp"
-        android:background="@color/primary_dark"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:background="@color/primary_dark" />
 
-</LinearLayout>
+</RelativeLayout>
