--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- Custom orange application theme. -->
     <style name="OverlayThemePeach" parent="Theme.Taskie">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_light</item>
@@ -12,6 +13,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
     </style>
+    <!-- Custom green application theme. -->
     <style name="OverlayThemeMint" parent="Theme.Taskie">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/primary_light_G</item>
@@ -39,7 +41,6 @@
     <style name="Theme.Taskie.NoActionBar">
         <item name="windowNoTitle">true</item>
         <item name="colorControlNormal">?attr/colorSecondaryVariant</item>
-        <!--<item name="android:textColorPrimary">@color/white</item>-->
     </style>
 
     <style name="Theme.Taskie.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
